Commentbox: avoid unicode characters overflowing.

--- a/src/scss/pages/shared/_commentbox.scss
+++ b/src/scss/pages/shared/_commentbox.scss
@@ -35,6 +35,11 @@
   padding: 0;
 }
 
+.chat-message-text {
+  display: block;
+  overflow: hidden;
+}
+
 .chat-tabs {
   margin-bottom: $padding-small;
 }
